<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">


      <item android:id="@+id/action_audio"
            android:title="@string/action_audio"
            android:icon="@drawable/ic_audio"
            app:showAsAction="always"/>

      <item android:id="@+id/action_image"
            android:title="@string/action_image"
            android:icon="@drawable/ic_import_image"
            app:showAsAction="always"/>

      <item android:id="@+id/action_connect_disconnect"
            android:title="@string/action_connect"
            app:showAsAction="never"/>

      <item android:id="@+id/action_change_name"
            android:title="@string/action_change_name"
            app:showAsAction="never"/>

      <item android:id="@+id/action_about"
            android:title="@string/action_about"
            app:showAsAction="never"/>
</menu>
